--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/setup-go@v2
       - run: echo $HOME
       - run: go build ./...
-      - run: go test ./...
+      - run: go test -v ./...
